# update-toml

./: .gitignore  README.md  pyproject-test.toml  pyproject.toml
example/: pyproject.toml
tests/: test_toml_file.py
update_toml/: toml_file.py
