[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "update_toml"
authors = [
    {name = "Jake Cyr", email = "cyrjake@gmail.com"},
]
version = "0.0.3"
description = "Update a toml value from a CLI"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["toml", "requirements", "update"]
license = {text = "MIT"}
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "tomlkit"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy",
  "flake8",
  "isort",
  "build",
]

[project.scripts]
update-toml = "update_toml.main:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
