[project]
name = "update_toml"
authors = [{ name = "Jake Cyr", email = "cyrjake@gmail.com" }]
version = "0.0.0"
description = "Update a toml value from a CLI"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["toml", "requirements", "update"]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = ["toml"]
